--- a/Front/src/app/main/community/community-home/community-home.component.html
+++ b/Front/src/app/main/community/community-home/community-home.component.html
@@ -1,6 +1,6 @@
 <o-form #form fxLayout="column" show-header="no">
 
-  <h1 class="community-title">¿Dónde quieres ir?</h1>
+  <h1 class="community-title">{{'Headline in communities' | oTranslate}}</h1>
 
   <div class="filter-style" fxLayout="column">
     <div fxLayout="row wrap" fxLayout="32px" class="buttons-container">
