--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -121,8 +121,8 @@
                     <o-grid-item *ngFor="let list of gridReservationReceived.dataArray">
 
                         <o-column layout-padding fxFlex="50" class="name-msg">
-                            <div class="name"><span>{{ list.name_traveler}} </span>
-                                <span>{{list.surname_travaler}}</span>
+                            <div class="name"><span>{{'Message from' | oTranslate}} {{ list.name_traveler}} </span>
+                                <span>{{list.surname_traveler}}</span>
                             </div>
                             <div class="msg"><span>{{ list.message }}</span></div>
                         </o-column>
@@ -157,17 +157,17 @@
         <mat-tab label="{{ 'RESERVATION_SENT_TAB' | oTranslate }}">
             <div class="container">
                 <o-grid #gridReservationSent attr="reservationSent" service="users" entity="reservationSent"
-                    columns="id_reservation;name_traveler;surname_traveler;name_host;surname_host;message;status_name;reservation_date"
+                    columns="id_reservation;name_traveler;surname_traveler;name_host;surname_host;message_answer;message;status_name;reservation_date"
                     query-rows="8" refresh-button="no" quick-filter="true" quick-filter-columns="name_host;surname_host;message;status_name"
                     visible-columns="name_host;message;status_name;reservation_date" [cols]="1" grid-item-height="70px"
                     gutter-size="1px" show-footer="no">
                     <o-grid-item *ngFor="let list of gridReservationSent.dataArray">
 
                         <o-column layout-padding fxFlex="50" class="name-msg">
-                            <div class="name"><span>{{ list.name_host}} </span>
+                            <div class="name"><span>{{'Message to' | oTranslate}} {{ list.name_host}} </span>
                                 <span>{{list.surname_host}}</span>
                             </div>
-                            <div class="msg"><span>{{ list.message }}</span></div>
+                            <div class="msg"><span>{{ list.message_answer }}</span></div>
                         </o-column>
 
                         <o-column layout-padding fxFlex="20" class="date">
