--- a/Front/src/app/main/home/home.component.scss
+++ b/Front/src/app/main/home/home.component.scss
@@ -1,7 +1,7 @@
 .container {
   position: relative; /* Permite posicionar elementos hijos relativos a este contenedor */
   width: 100%; /* Ancho del 100% para ocupar todo el ancho de la pantalla */
-  height: 100vh; /* Altura del 100% de la ventana gráfica (viewport height) */
+  height: 100%; /* Altura del 100% de la ventana gráfica (viewport height) */
   overflow: hidden; /* Oculta cualquier contenido que desborde del contenedor */
 }
 .background {
