--- a/Front/src/app/main/towns/towns-home/towns-home.component.html
+++ b/Front/src/app/main/towns/towns-home/towns-home.component.html
@@ -5,7 +5,7 @@
 
   <o-form #form fxLayout="column" show-header="no">
 
-    <h2 class="towns-home">Elige tu destino favorito</h2>
+    <h2 class="towns-home">{{'CHOOSEDESTINATIONMSSG' | oTranslate}}</h2>
     
         <div class="filter-style" fxLayout="column">
           <div fxLayout="row wrap" fxLayout="32px" class="buttons-container">
