--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -143,8 +143,8 @@
                         </o-column>
                         <o-column layout-padding fxFlex="15" class="buttonVer"
                             (click)="verReservaRec(list.id_reservation)">
-                            <div class="iconE">{{'Read Message' | oTranslate}}</div>
-                            <div class="iconA">{{'Read Message' | oTranslate}}</div>
+                            <div class="iconE">{{'READMESSAGE' | oTranslate}}</div>
+                            <div class="iconA">{{'READMESSAGE' | oTranslate}}</div>
                         </o-column>
                     </o-grid-item>
                 </o-grid>
@@ -185,8 +185,8 @@
                         </o-column>
                         <o-column layout-padding fxFlex="15" class="buttonVer"
                             (click)="verReservaSent(list.id_reservation)">
-                            <div class="iconE">{{'Read Message' | oTranslate}}</div>
-                            <div class="iconA">{{'Read Message' | oTranslate}}</div>
+                            <div class="iconE">{{'READMESSAGE' | oTranslate}}</div>
+                            <div class="iconA">{{'READMESSAGE' | oTranslate}}</div>
                         </o-column>
                     </o-grid-item>
                 </o-grid>
