--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.html
@@ -5,7 +5,7 @@
         <div class="date2">{{reservation_date | date: 'dd/MM/yyyy'}}</div>
         <div class="boxes">
             <div class="box1">
-                <div class="nameT">{{name_traveler}} {{surname_traveler}} (Tú) </div>
+                <div class="nameT">{{name_traveler}} {{surname_traveler}} {{'YOUTAG' | oTranslate}}</div>
                 <div class="msgT">{{message}}</div>
             </div>
             <div *ngIf="!(id_status == 3)" class="box2">
