--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-received-detail/travelers-reservation-received-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-received-detail/travelers-reservation-received-detail.component.html
@@ -9,14 +9,14 @@
                 <div class="msgT">{{message}}</div>
             </div>
             <div *ngIf="id_status == 1" class="box2">
-                <div  class="nameH">{{name_host}} (Tú)</div><span></span>
+                <div  class="nameH">{{name_host}} {{'YOUTAG' | oTranslate}}</div><span></span>
                 <div  class="msgH">{{message_answer}}</div>
             </div>
             <o-textarea-input *ngIf="id_status == 3" attr="message_answer"
                 label="Responde al mensaje de {{name_traveler}}" fxFlex="70" max-length="200"></o-textarea-input>
 
             <div class="buttons" *ngIf="id_status == 3">
-                <div class="acc-rej">Aceptas la fecha de visita de {{name_traveler}}? <br>Si lo haces, le enviaremos tus datos de contacto.</div>
+                <div class="acc-rej">{{'ACCEPTVISITOF?' | oTranslate}} {{name_traveler}}? <br>Si lo haces, le enviaremos tus datos de contacto.</div>
                 <o-button class="reject" type="RAISED" label="REJECT" layout-padding color="accent"
                     (onClick)="rejectReservation(id_reservation)"></o-button>
                 <o-button class="accept" type="RAISED" label="ACCEPT" layout-padding color="accent"
