traduccion all-cities

--- a/Front/src/app/main/community/community-home/community-home.component.html
+++ b/Front/src/app/main/community/community-home/community-home.component.html
@@ -51,7 +51,7 @@
               <img src="{{ getImageAllComumunity('all_communities') }}" alt="Texto alternativo" class="community-image">
             </a>
             </div>
-            <div class="community-name">Todas las ciudades</div>
+            <div class="community-name">{{'ALLCITIES' | oTranslate}}</div>
           </o-column>
         </o-grid-item>
       </div>
