--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -261,7 +261,7 @@
 
 
 
-        <!-- Pestaña para habilitar servicios de las anfitrionas -->
+         Pestaña para habilitar servicios de las anfitrionas -->
         <!-- <mat-tab label="HOUSES">
             <o-table #form attr="houses" service="houses" entity="house" parent-keys="user_id" keys="house_id"
                 detail-form-route="houses" edit-form-route="houses" columns="house_id;address;city;state;zip"
