--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.html
@@ -29,6 +29,14 @@
                 (onClick)="(deleteReservationFn(id_reservation))"></o-button>
         </div>
 
+        <o-textarea-input *ngIf="id_status == 1" attr="message_cancellation"
+                label="Cancela la reserva para {{name_host}}" fxFlex="70" max-length="200"></o-textarea-input>
+
+        <div class="buttons" *ngIf="id_status == 1">
+            <o-button class="reject" type="RAISED" label="CANCEL" layout-padding color="accent"
+                (onClick)="(cancelReservation(id_reservation))"></o-button>
+        </div>
+
 
 
     </o-form>
