--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.html
@@ -1,28 +1,53 @@
 <div class="container">
     <o-form #form service="users" entity="reservation" keys="id_reservation" editable-detail="true" show-header="no"
         show-header-navigation="no" layout-direction="column" (onDataLoaded)="ngOnInit()">
-        <div class="date1">{{'Reservation Date' | oTranslate}}</div>
-        <div class="date2">{{reservation_date | date: 'dd/MM/yyyy'}}</div>
+
+        <div class="item-scape" (click)="closeDialog()"><span class="material-symbols-outlined">cancel</span>
+        </div>
+
         <div class="boxes">
-            <div class="box1">
-                <div class="nameT">{{name_traveler}} {{surname_traveler}} {{'YOUTAG' | oTranslate}}</div>
+
+            <div class="boxSc-date">
+                <div class="item-scape" (click)="closeDialog()"><span class="material-symbols-outlined">cancel</span>
+                </div>
+                <div clas="item-date">
+                    <div class="date1">{{'Reservation Date' | oTranslate}}</div>
+                    <div class="date2">{{reservation_date | date: 'dd/MM/yyyy'}}</div>
+                </div>
+            </div>
+
+
+            <div class="boxName-msgT">
+                <div class="nameT">{{name_traveler}} {{'YOUTAG' | oTranslate}}</div>
                 <div class="msgT">{{message}}</div>
             </div>
-            <div *ngIf="!(id_status == 3)" class="box2">
+
+            <div *ngIf="!(id_status == 3)" class="boxName-msgH">
                 <div class="nameH">{{name_host}} {{surname_host}}</div><span></span>
                 <div class="msgH">{{message_answer}}</div>
             </div>
-            <div class="auto">
-                <p *ngIf="id_status == 1"> {{'Reservation accepted' | oTranslate}}
 
-                <p *ngIf="id_status == 2"> {{name_host}} {{'Reservation rejected text' | oTranslate}}  </p>
-                <p *ngIf="id_status == 3">{{name_host}} {{'Reservation delete' | oTranslate}} </p>
-            </div>
-            <div class="info">
-                <p *ngIf="id_status == 1">Tel: {{phonenumber_host}}</p>
-                <p *ngIf="id_status == 1">E-mail: {{email_host}}</p>
-            </div>
+            <div class="backgroundBox">
+                <div class="box-autoResp">
+                    <div *ngIf="id_status == 1"> {{'Reservation accepted' | oTranslate}}</div>
+                    <div *ngIf="id_status == 2"> {{name_host}} {{'Reservation rejected text' | oTranslate}} </div>
+                    <div *ngIf="id_status == 3">{{name_host}} {{'Reservation delete' | oTranslate}} </div>
+                </div>
 
+                <div class="boxInfo">
+                    <div *ngIf="id_status == 1">
+                        <span>· Tel:</span>
+                        <b>&nbsp;{{phonenumber_host}}</b>
+                    </div>
+                    <div *ngIf="id_status == 1">
+                        <span>· E-mail:</span><b>&nbsp;{{email_host}}</b>
+                    </div>
+                </div>
+            </div>
+            <div class="buttons" *ngIf="id_status == 3">
+                <o-button class="deleteReservationButton" type="RAISED" label="DELETE" layout-padding color="accent"
+                    (onClick)="(deleteReservationFn(id_reservation))"></o-button>
+            </div>
         </div>
         <div class="buttons" *ngIf="id_status == 3">
             <o-button class="deleteReservationButton" type="RAISED" label="DELETE" layout-padding color="accent"
