--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-received-detail/travelers-reservation-received-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-received-detail/travelers-reservation-received-detail.component.html
@@ -1,25 +1,40 @@
 <div class="container">
     <o-form #form service="users" entity="reservation" keys="id_reservation" editable-detail="true" show-header="no"
         show-header-navigation="no" layout-direction="column" (onDataLoaded)="ngOnInit()">
-        <div class="date1"> {{'Reservation Date' | oTranslate}}</div>
-        <div class="date2">{{reservation_date | date: 'dd/MM/yyyy'}}</div>
+
+        <div class="item-scape" (click)="closeDialog()"><span class="material-symbols-outlined">cancel</span>
+        </div>
+
         <div class="boxes">
-            <div class="box1">
+
+        <div class="boxSc-date">
+            <div class="item-scape" (click)="closeDialog()"><span class="material-symbols-outlined">cancel</span>
+            </div>
+            <div clas="item-date">
+                <div class="date1">{{'Reservation Date' | oTranslate}}</div>
+                <div class="date2">{{reservation_date | date: 'dd/MM/yyyy'}}</div>
+            </div>
+        </div>
+        
+            <div class="boxName-msgT">
                 <div class="nameT">{{name_traveler}} {{surname_traveler}}</div>
                 <div class="msgT">{{message}}</div>
             </div>
-            <div *ngIf="id_status == 1" class="box2">
+
+            <div *ngIf="id_status == 1" class="boxName-msgH">
                 <div  class="nameH">{{name_host}} {{'YOUTAG' | oTranslate}}</div><span></span>
                 <div  class="msgH">{{message_answer}}</div>
             </div>
+
             <o-textarea-input *ngIf="id_status == 3" attr="message_answer"
-                label="Responde al mensaje de {{name_traveler}}" fxFlex="70" max-length="200"></o-textarea-input>
+
+                label= "{{'LABEL_INPUT_RESP' | oTranslate}} {{name_traveler}}" fxFlex="70" max-length="100"></o-textarea-input>
 
             <div class="buttons" *ngIf="id_status == 3">
                 <div class="acc-rej">{{'ACCEPTVISITOF?' | oTranslate}} {{name_traveler}}? <br>{{'ACCEPTVISITOF2?' | oTranslate}}</div>
-                <o-button class="reject" type="RAISED" label="REJECT" layout-padding color="accent"
+                <o-button class="reject" type="RAISED" label="REJECT" layout-padding color="primary"
                     (onClick)="rejectReservation(id_reservation)"></o-button>
-                <o-button class="accept" type="RAISED" label="ACCEPT" layout-padding color="accent"
+                <o-button class="accept" type="RAISED" label="ACCEPT" layout-padding color="primary"
                     (onClick)="acceptReservation(id_reservation)"></o-button>
             </div>
 
@@ -32,11 +47,11 @@
                     (onClick)="cancelReservation(id_reservation)"></o-button>
             </div>
 
-            <div class="auto">
-                <p *ngIf="id_status == 1"> {{ 'ACCEPT_RES1' | oTranslate }} {{name_traveler}} {{ 'ACCEPT_RES2' | oTranslate }}
-                </p>
-                <p *ngIf="id_status == 2"> {{'You rejected the reservation' | oTranslate}}</p>
-                <p *ngIf="id_status == 4"> {{'You rejected the reservation' | oTranslate}}</p>
+            <div class="boxInfo">
+                <div *ngIf="id_status == 1"> {{ 'ACCEPT_RES1' | oTranslate }} {{name_traveler}} {{ 'ACCEPT_RES2' | oTranslate }}
+                </div>
+                <div *ngIf="id_status == 2"> {{'You rejected the reservation' | oTranslate}}</div>
+                <div *ngIf="id_status == 4"> {{'You rejected the reservation' | oTranslate}}</div>
             </div>
         </div>
     </o-form>
